# jdl-api-cpp

./: CMakeLists.txt
cmake_modules/: FindGLiteJobid.cmake
interface/: CMakeLists.txt
interface/glite/jdl/: Ad.h  DAGAd.h  DAGAdManipulation.h  ExpDagAd.h  JDLAttributes.h  JdlAttributeList.h  JobAd.h  JobAdManipulation.h  JobAdSchema.h  ManipulationExceptions.h  NodeAd.h  PrivateAdManipulation.h  PrivateAttributes.h  RequestAdExceptions.h  adconverter.h  collectionad.h  convert.h  exception_codes.h  extractfiles.h  grammar.h  jdl_attributes.h  parametricad.h
project/: glite-jdl-api-cpp.spec.in
src/: CMakeLists.txt
src/requestad/: Ad.cpp  CMakeLists.txt  DAGAd.cpp  DAGAdManipulation.cpp  ExpDagAd.cpp  JDLAttributes.cpp  JdlAttributeList.cpp  JobAd.cpp  JobAdManipulation.cpp  JobAdSchema.cpp  ManipulationExceptions.cpp  NodeAd.cpp  PrivateAdManipulation.cpp  PrivateAttributes.cpp  RequestAdExceptions.cpp  adconverter.cpp  collectionad.cpp  convert.cpp  extractfiles.cpp  grammar.cpp  parametricad.cpp
src/requestad/pkgconfig/: CMakeLists.txt  jdl-api-cpp.pc.in
